<resources>
    <string name="app_name">Proto-EE</string>
    <string name="app_name_prototype">Prototype</string>
    <string name="google_map_api_key">AIzaSyCe7uFkqtwtwEXtqo4g0wtpjauitYWloKc</string>
    <!--action-->
    <string name="action_login">Masuk</string>
    <string name="action_logout">Keluar</string>
    <string name="action_try_again">Coba lagi</string>
    <string name="action_cancel">Batal</string>
    <string name="action_back">Kembali</string>
    <string name="action_ok">Ok</string>
    <string name="action_yes">Ya</string>
    <string name="action_edit">Ubah</string>
    <string name="action_detail">Detail</string>
    <string name="action_send">Kirim</string>
    <string name="action_save">Simpan</string>
    <string name="action_search">Cari</string>
    <string name="action_edit_profile">Edit Profil</string>
    <string name="action_change_password">Ubah Password</string>

    <!--text-->
    <string name="text_dashboard">Dashboard</string>
    <string name="text_history">Riwayat</string>
    <string name="text_profile">Profil</string>
    <string name="text_loading">Loading</string>
    <string name="text_alert">Peringatan</string>
    <string name="text_confirmation">Konfirmasi</string>
    <string name="text_search">Cari</string>
    <string name="text_name">Nama</string>
    <string name="text_role">Jabatan</string>
    <string name="text_province">Provinsi</string>
    <string name="text_city">Kota</string>
    <string name="text_coordinat">Koordinat</string>
    <string name="text_fullname">Nama Lengkap</string>
    <string name="text_gender">Jenis Kelamin</string>
    <string name="text_phone">Nomor HP</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_old_password">Password Lama</string>
    <string name="text_new_password">Password Baru</string>
    <string name="text_confirm_password">Konfirmasi Password</string>
    <string name="text_forgot_password">Lupa password</string>
    <string name="text_camera">Kamera</string>
    <string name="text_photo">Foto</string>
    <string name="text_change_profile">Atur Profil</string>
    <string name="text_detail_user">Detail Pengguna</string>
    <string name="text_look_location">Lihat Lokasi</string>
    <string name="text_pick_location">Ambil Lokasi</string>
    <string name="text_choose_product">Pilih Produk</string>
    <string name="text_choose_province">Pilih Provinsi</string>
    <string name="text_choose_city">Pilih Kota</string>
    <string name="text_choose_coordinate">Pilih Koordinat</string>
    <string name="text_choose_exp_date">Pilih Tanggal Kadaluarsa</string>
    <string name="text_choose_image">Pilih Gambar</string>
    <string name="text_coordinate_choosed">Koordinat dipilih</string>
    <string name="text_name_owner">Nama Pemilik</string>
    <string name="text_name_merchant">Nama Toko</string>
    <string name="text_no_phone">No. Telp / HP</string>
    <string name="text_adddress_merchant">Alamat Toko</string>
    <string name="text_image_merchant">Gambar Toko</string>
    <string name="text_name_product">Nama Produk</string>
    <string name="text_price_product">Harga Produk</string>
    <string name="text_total_price_product">Total Harga Produk</string>
    <string name="text_desc_product">Deskripsi Produk</string>
    <string name="text_image_product">Gambar Produk</string>
    <string name="text_take_image">Ambil Gambar</string>
    <string name="text_stock_product">Jumlah Produk</string>
    <string name="text_note">Catatan</string>
    <string name="text_stock_merchant">Stok Toko</string>
    <string name="text_stock_werehouse">Stok Gudang</string>
    <string name="text_count_payment">Total Biaya</string>
    <string name="text_exp_date">Tanggal Kadaluarsa</string>
    <string name="text_image">Pilih gambar</string>
    <string name="text_product_display">Pilih Produk sesuai display</string>
    <string name="text_are_you_sure_want_to_exit">Apakah Anda yakin ingin keluar?</string>
    <string name="text_ask_logout">Apakah anda ingin logout?</string>
    <string name="text_delete_md">Apakah anda ingin menghapus data MD ini?</string>
    <string name="text_delete_spv">Apakah anda ingin menghapus data SPV ini?</string>
    <string name="text_delete_merchant">Apakah anda ingin menghapus data Toko ini?</string>
    <string name="text_delete_product">Apakah anda ingin menghapus data Produk ini?</string>
    <string name="text_will_delete_row">Apakah Anda ingin menghapus data ini ?</string>

    <!--error message-->
    <string name="error_message_internet">There is no internet connection!</string>
    <string name="error_rto">Request time out!</string>
    <string name="error_server">Failed connect to API server!</string>
    <string name="error_name_empty">Nama tidak boleh kosong</string>
    <string name="error_name_invalid">Nama ini kurang dari 3 karakter</string>
    <string name="error_name_empty_char">Nama tidak boleh ada karakter kosong</string>
    <string name="error_email_empty">Email tidak boleh kosong</string>
    <string name="error_email_invalid">Email ini tidak valid</string>
    <string name="error_phone_empty">No. Hp tidak boleh kosong</string>
    <string name="error_phone_invalid">No. Hp tidak valid</string>
    <string name="error_password_empty">Password tidak boleh kosong</string>
    <string name="error_password_invalid">Password tidak boleh kurang dari 6 karakter</string>
    <string name="error_merchant_empty">Nama Toko tidak boleh kosong</string>
    <string name="error_merchant_invalid">Nama Toko tidak boleh ada karakter kosong</string>
    <string name="error_owner_empty">Nama Pemilik tidak boleh kosong</string>
    <string name="error_owner_invalid">Nama Pemilik tidak boleh ada karakter kosong</string>
    <string name="error_address_empty">Alamat tidak boleh kosong</string>
    <string name="error_no_data">Tidak memiliki data</string>
    <string name="error_cant_get_current_location">Gagal mendapat lokasi anda</string>
    <string name="error_name_product_empty">Nama Produk tidak boleh kosong</string>
    <string name="error_name_product_invalid">Nama Produk tidak boleh ada karakter kosong</string>
    <string name="error_price_product_empty">Harga Produk tidak boleh kosong</string>
    <string name="error_price_product_invalid">Harga Produk harus angka</string>
    <string name="error_stock_product_empty">Stok Produk tidak boleh kosong</string>
    <string name="error_desc_product_empty">Deskripsi Produk tidak boleh kosong</string>
    <string name="error_text_cant_delete_row">Tidak dapat menghapus baris ini.</string>
    <string name="error_province_spv">Pilih provinsi Sesuai provinsi anda sebagai SPV</string>
    <string name="error_city_spv">Pilih kota Sesuai kota anda sebagai SPV</string>
    <string name="error_product_same">Produk telah dipilih sebelumnya</string>
    <string name="error_not_user">Anda tidak berhak</string>
</resources>
