<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_dashboard"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/text_dashboard"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/text_history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        android:icon="@drawable/ic_logout"
        android:title="@string/action_logout"
        app:showAsAction="ifRoom" />
</menu>