<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_adapter_product_display"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/colorWhite">
    <LinearLayout
        android:id="@+id/linearProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextProduct"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textProduct"
                android:paddingLeft="10dp"
                android:drawablePadding="@dimen/spacing_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_shopping_cart_black_24dp"
                android:hint="@string/text_name_product"
                android:maxLines="1"
                android:textSize="@dimen/text_size_small" />

        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox
            android:id="@+id/check"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearProduct"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextMerchant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textMerchant"
                android:paddingLeft="10dp"
                android:drawablePadding="@dimen/spacing_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_next_week_black_24dp"
                android:hint="@string/text_stock_merchant"
                android:inputType="number"
                android:maxLines="1"
                android:text="0"
                android:textSize="@dimen/text_size_small" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextWerehouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textWerehouse"
                android:paddingLeft="10dp"
                android:drawablePadding="@dimen/spacing_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_next_week_black_24dp"
                android:hint="@string/text_stock_werehouse"
                android:inputType="number"
                android:maxLines="1"
                android:text="0"
                android:textSize="@dimen/text_size_small" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearExp"
        android:layout_below="@+id/linearStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/spacing_10dp"
            android:paddingRight="7dp"
            android:paddingBottom="3dp"
            android:text="@string/text_exp_date"
            android:textColor="@color/colorBlack2"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/exp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
            android:paddingLeft="@dimen/spacing_10dp"
            android:paddingRight="12dp"
            android:text=""
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorGrey" />
    </LinearLayout>

</RelativeLayout>