<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_adapter_product_transaction"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/colorWhite">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp">
        <LinearLayout
            android:id="@+id/linearProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <ImageView
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_shopping_cart_black_24dp"
                android:tint="@color/colorBlack2"
                android:layout_gravity="center_vertical"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="7dp"
                    android:paddingBottom="3dp"
                    android:text="@string/text_name_product"
                    android:textColor="@color/colorBlack"
                    android:textSize="11sp" />

                <Spinner
                    android:id="@+id/product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/spacing_10dp"
                    android:paddingRight="@dimen/spacing_5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:spinnerMode="dialog" />

                <TextView
                    android:id="@+id/productText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                    android:paddingLeft="@dimen/spacing_10dp"
                    android:paddingRight="@dimen/spacing_5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text=""
                    android:visibility="gone"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextNote"
            android:layout_below="@+id/linearProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textNote"
                android:paddingLeft="10dp"
                android:drawablePadding="@dimen/spacing_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_assignment_black_24dp"
                android:hint="@string/text_note"
                android:maxLines="1"
                android:textSize="@dimen/text_size_small" />

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:id="@+id/linearStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputTextNote"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputTextStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textStock"
                    android:paddingLeft="10dp"
                    android:drawablePadding="@dimen/spacing_10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_next_week_black_24dp"
                    android:hint="@string/text_stock_product"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="0"
                    android:textSize="@dimen/text_size_small" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputTextPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textPrice"
                    android:paddingLeft="10dp"
                    android:drawablePadding="@dimen/spacing_10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_bookmark_black_24dp"
                    android:hint="@string/text_price_product"
                    android:maxLines="1"
                    android:text="Rp. 0"
                    android:textSize="@dimen/text_size_small" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextTotalPrice"
            android:layout_below="@+id/linearStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textTotalPrice"
                android:paddingLeft="10dp"
                android:drawablePadding="@dimen/spacing_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_bookmark_black_24dp"
                android:hint="@string/text_total_price_product"
                android:maxLines="1"
                android:text="Rp. 0"
                android:textSize="@dimen/text_size_small" />

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/delete"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_delete_black_24dp"
        android:layout_toRightOf="@+id/linearStock"
        android:tint="@color/colorPrimary"/>

</LinearLayout>